<resources>
    <string name="app_name">BaratasAutoPecas</string>
    <string name="action_search">Buscar</string>
    <string name="action_config">Configurações</string>
    <string name="action_refresh">Atualizar</string>
    <string name="nav_stock">Estoque</string>
    <string name="nav_customers">Clientes</string>
    <string name="nav_providers">Fornecedores</string>
    <string name="nav_sales">Vendas</string>
    <string name="nav_customer">Clientes</string>
    <string name="nav_employee">Funcionários</string>
    <string name="nav_product">Produtos</string>
    <string name="nav_provider">Fornecedores</string>
    <string name="nav_vehicle">Veículos</string>
    <string name="nav_payment_method">Métodos de Pagamento</string>
    <string name="nav_sale">Vendas</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawe_close">Fechar</string>
    <string name="nav_logout">Sair</string>
    <string name="action_add_part">Adicionar Peça</string>
    <string name="API_KEY">AIzaSyBAwJhdTR6if2E6xkPlKmNaWByPp_WC0gI</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_localization">Localização</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="total_parts">Peças no estoque</string>
    <string name="total_customers">Total clientes</string>
    <string name="total_providers">Total fornecedores</string>
    <string name="total_sales">Total vendas</string>
    <string name="vehicle_types">Tipos veículos</string>
    <string name="total_employees">Equipe</string>
</resources>