<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_cliente"
            android:title="@string/nav_dashboard"
            android:checked="true"></item>
        <item android:id="@+id/nav_customer"
            android:icon="@drawable/ic_cliente"
            android:title="@string/nav_customer"
            android:checked="true"></item>
        <item android:id="@+id/nav_employee"
            android:icon="@drawable/ic_funcionarios"
            android:title="@string/nav_employee"
            android:checked="true"></item>
        <item android:id="@+id/nav_product"
            android:icon="@drawable/ic_produto"
            android:title="@string/nav_product"
            android:checked="true"></item>
        <item android:id="@+id/nav_provider"
            android:icon="@drawable/ic_fornecedor"
            android:title="@string/nav_provider"
            android:checked="true"></item>
        <item android:id="@+id/nav_stock"
            android:icon="@drawable/ic_estoque"
            android:title="@string/nav_stock"
            android:checked="true"></item>
        <item android:id="@+id/nav_vehicle"
            android:icon="@drawable/ic_veiculo"
            android:title="@string/nav_vehicle"
            android:checked="true"></item>
        <item android:id="@+id/nav_payment_method"
            android:icon="@drawable/ic_metodo_pagamento"
            android:title="@string/nav_payment_method"
            android:checked="true"></item>
        <item android:id="@+id/nav_sale"
            android:icon="@drawable/ic_vendas"
            android:title="@string/nav_sale"
            android:checked="true"></item>
        <item android:id="@+id/nav_localization"
            android:icon="@drawable/ic_local_black"
            android:title="@string/nav_localization"
            android:checked="true"></item>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sair"
            android:title="@string/nav_logout"
            android:checked="true"></item>
    </group>
</menu>