<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutLateralMenu"
    tools:context=".CustomersActivity"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="15dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/part_quantity"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_parts"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/customer_quantity"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_customers"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/employee_quantity"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_employees"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/sale_quantity"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_sales"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/provider_quantity"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_providers"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/vehicle_types"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:layout_marginTop="10dp">
                    </TextView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vehicle_types"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="20dp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>


    </LinearLayout>
    <include layout="@layout/nav_view" />
</androidx.drawerlayout.widget.DrawerLayout>